fix scrollbar for weeks

--- a/client/resources/sass/components/_calendar.scss
+++ b/client/resources/sass/components/_calendar.scss
@@ -13,11 +13,8 @@
   }
   
   .cv-week {
-    overflow: hidden !important;
-    
-    &:hover {
-      overflow-y: auto !important;
-    }
+    width: calc(100% + 17px);
+    overflow-y: scroll !important;
   }
   
   .cv-header {
